--- a/Linguagem C/Modularização/Makefile Simples/makefile
+++ b/Linguagem C/Modularização/Makefile Simples/makefile
@@ -6,22 +6,22 @@ all: printy
 # o target 'printy' tem como pre-requisito os arquivos 'main.o' e 'helloWorld.o'
 printy: main.o helloWorld.o
 	gcc -o printy main.o helloWorld.o
-	echo ''
+	@ echo ''
 
 
 # os targets dos arquivos .o tem como pre-requisito os arquivos .c
 main.o: main.c helloWorld.h
 	gcc -c main.c -o main.o
 	#gcc -o main.o main.c -c -W -Wall -ansi -pedantic
-	echo ''
+	@ echo ''
 
 helloWorld.o: helloWorld.c helloWorld.h
 	gcc -c helloWorld.c -o helloWorld.o
 	#gcc -o helloWorld.o helloWorld.c -c -W -Wall -ansi -pedantic
-	echo ''
+	@ echo ''
 
 
 # o target 'clean' nao tem como pre-requisito, serve para remover arquivos residuais
 clean:
 	rm -rf *.o *~ printy # removendo diretorios e arquivos .o, arquivos de backup e versao antiga do 'printy'
-	echo ''
+	@ echo ''
