--- a/Linguagem C/Modularização e Makefile/Macros e variáveis Automaticas/makefile
+++ b/Linguagem C/Modularização e Makefile/Macros e variáveis Automaticas/makefile
@@ -2,18 +2,15 @@
 # variavel 'BIN_NAME' recebe o nome do programa em arquivo binario
 BIN_NAME=finalprogram
 
-
 # macro 'C_SOURCE' usa funcao wildcard para obter os nomes de todos os arquivos de codigo-fonte com extensao .c
 C_SOURCE=$(wildcard ./source/*.c)
 
 # macro 'H_SOURCE' usa funcao wildcard para obter os nomes de todos os arquivos de codigo-fonte com extensao .h
-H_SOURCE=$(wildcard ./source/*.h)
+H_SOURCE=$(wildcard ./include/*.h)
 
-
-# macro 'OBJ' utiliza todos os nomes dos arquivos de 'C_SOURCE', entretanto substitui .c por .o e 'source' por 'objects'
-OBJ=$(subst .c,.o,$(subst source,objects,$(C_SOURCE)))
+# macro 'OBJ' utiliza todos os nomes dos arquivos de 'C_SOURCE', entretanto substitui .c por .o e 'source' por 'object'
+OBJ=$(subst .c,.o,$(subst source,object,$(C_SOURCE)))
 #OBJ=${C_SOURCE:.c=.o}
-
 
 # definindo compilador e flags
 CPL=gcc
@@ -25,57 +22,62 @@ CPL_FLAGS=-c   \
 # usado Space no lugar de Tab para evitar erros
 
 
+
+# target 'run' feito para executar o programa
+run: all
+	@ ./bin/${BIN_NAME}
+# ./ executa binario local
+
+
+# target 'valgrind' feito para verificar vazamentos de memoria no programa
+valgrind: all
+	@ clear
+	@ valgrind ./bin/${BIN_NAME}
+
+
 # o target 'all' tem como pre-requisito a variavel 'BIN_NAME' e a variavel 'objectFolder', que se tornam targets
-all: objectFolder ${BIN_NAME}
+all: objectFolder ./bin/${BIN_NAME}
 	@ echo " \033[1;32m  Tudo feito!  \033[0m "
 	@ echo ''
 # ${} e $() podem igualmente ser usadas para macros
 
 
-# target 'run' feito para executar o programa
-run: objectFolder ${BIN_NAME}
-	@ ./${BIN_NAME}
-# ./ executa binario local
-
-
-# target 'valgrind' feito para verificar vazamentos de memoria no programa
-valgrind: ${BIN_NAME}
-	@ valgrind ./${BIN_NAME}
-
-
 # target para criar diretorio dos objetos de compilacao
 objectFolder:
-	mkdir -p objects
+	@ mkdir -p object
+	@ mkdir -p bin
 # -p nao gera erro caso ja exista
 
 
 # o target 'BIN_NAME' tem como pre-requisito a macro 'OBJ' e seus arquivos
-${BIN_NAME}: ${OBJ}
-	${CPL} $^ -o $@
+./bin/${BIN_NAME}: ${OBJ}
+	@ ${CPL} $^ -o $@
 	@ echo " \033[0;33m  Criando binario \033[43;1;37m$@\033[0m\033[0;33m  \033[0m "
 	@ echo ''
 # $@ nome do target, $^ todos os pre-requisitos, $< primeiro pre-equisito
 
 
-# o target '%.o' pega o stem (tronco do nome, sem extensao) e o utiliza como referencia no pre-requisito
-./objects/%.o: ./source/%.c ./source/%.h
-	${CPL} $< ${CPL_FLAGS} -o $@
+# o target '%.o' pega o 'stem' (tronco do nome, sem extensao) e o utiliza como referencia no pre-requisito
+./object/%.o: ./source/%.c ./include/%.h
+	@ ${CPL} $< ${CPL_FLAGS} -o $@ -I ./include
 	@ echo " \033[0;35m  Gerando objeto de compilacao \033[45;1;37m$@\033[0m\033[0;35m  \033[0m "
 	@ echo ''
 # @ oculta linha
 
 
 # main e compilado aqui pois nao atende os pre-requisitos para o target anterior
-./objects/main.o: ./source/main.c ${H_SOURCE}
-	${CPL} $< ${CPL_FLAGS} -o $@
+./object/main.o: ./source/main.c ${H_SOURCE}
+	@ ${CPL} $< ${CPL_FLAGS} -o $@ -I ./include
 	@ echo " \033[0;34m  Gerando objeto de compilacao \033[44;1;37m$@\033[0m\033[0;34m  \033[0m "
 	@ echo ''
+# -o gera o objeto de compilação como output, -I inclui as bibliotecas do diretorio selecionado a fim de evitar que o #include dos codigos necessitem navegar pelo patch
 
 
 # o target 'clean' nao tem como pre-requisito, serve para remover arquivos residuais
 clean:
-	rm -rf ./objects/*.o *~ ${BIN_NAME}
-	rmdir objects
-	@ echo " \033[1;31m  Removendo binario \033[41;1;37m${BIN_NAME}\033[0m\033[1;31m e objetos de compilacao \033[41;1;37m${OBJ}\033[0m\033[1;31m e arquivos de backup  \033[0m "
+	@ rm -rf ./object/*.o *~ ./bin/${BIN_NAME}
+	@ rmdir object bin
+	@ echo " \033[1;31m  Removendo binario \033[41;1;37m./bin/${BIN_NAME}\033[0m\033[1;31m e objetos de compilacao \033[41;1;37m${OBJ}\033[0m\033[1;31m e arquivos de backup  \033[0m "
 	@ echo ''
-# -rf remove independente do conteudo do diretorio, *~ sao os arquivos de backup no diretorio do usuario
+# -rf remove independente do conteudo do diretorio, podendo remover tanto os arquivos quanto diretorios, *~ sao os arquivos de backup no diretorio do usuario
+
