programas pegos emprestado kk

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-./Linguagem\ C/Learning-C-by\ Kevin\ Carvalho/.git/*
-./Linguagem\ C/Learning-C-by\ Kevin\ Carvalho/.git
-./Linguagem\ C/Learning-C-by\ Kevin\ Carvalho/.gitignore
+/Linguagem\ C/Learning_C-by\ Kevin\ Carvalho/.git/*
+/Linguagem\ C/Learning_C-by\ Kevin\ Carvalho/.git
+/Linguagem\ C/Learning_C-by\ Kevin\ Carvalho/.gitignore
+
