removed another codes

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 /Arduino
-/Flutter & Dart
-/HTML+CSS+JS
-/Linguagem C
-/Linguagem Markdown
-/Linguagem Python
-/SQL & NoSQL
-/Shell Script, Make & Makefile
+/Flutter-Dart
+/HTML-CSS-JS
+/Linguagem_C
+/Linguagem_Python
+/SQL-NoSQL
+/Shell_Script-Make-Makefile
 
