--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,132 @@
 {
+	"explorer.autoReveal": true,
+	"editor.suggestSelection": "first",
+	"editor.fontFamily": "Fira Code",
+	"editor.fontLigatures": true,
+	"editor.fontSize": 15,
+	"editor.fontWeight": "400",
+	"editor.tabSize": 2,
+	"editor.insertSpaces": false,
+	"vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+	"liveServer.settings.donotShowInfoMsg": true,
+	"C_Cpp.updateChannel": "Insiders",
+	"C_Cpp.errorSquiggles": "Disabled",
+	"C_Cpp.dimInactiveRegions": true,
+	"C_Cpp.inactiveRegionOpacity": 0.55,
+	"cSpell.language": "pt,pt-BR,en",
+	"cSpell.enableFiletypes": [
+		"!jade",
+		"!yml",
+		"log",
+		"ruby",
+		"shellscript",
+		"sql",
+		"swift",
+		"xml"
+	],
+	"sync.gist": "31d051020e1fe66435b53f28a0ed30ee",
+	"sync.forceUpload": true,
+	"sync.quietSync": true,
+	"sync.forceDownload": true,
+	"sync.autoUpload": true,
+	"sync.autoDownload": true,
+	"workbench.sideBar.location": "left",
+	"workbench.colorTheme": "Dracula",
+	"workbench.iconTheme": "material-icon-theme",
+	"workbench.editorAssociations": {
+		"*.ipynb": "jupyter.notebook.ipynb"
+	},
+	"jupyter.alwaysTrustNotebooks": true,
+	"jupyter.askForKernelRestart": false,
+	"python.terminal.launchArgs": [],
+	"python.showStartPage": false,
+	"debug.allowBreakpointsEverywhere": true,
+	"debug.console.closeOnEnd": true,
+	"explorer.confirmDragAndDrop": false,
+	"diffEditor.ignoreTrimWhitespace": false,
+	"tabnine.experimentalAutoImports": true,
+	"[json]": {
+		"editor.defaultFormatter": "vscode.json-language-features"
+	},
+	"git.autofetch": true,
+	"git.enableSmartCommit": true,
+	"gitlens.defaultDateFormat": null,
+	"gitlens.views.remotes.branches.layout": "list",
+	"c-cpp-compile-run.cpp-flags": "-Wall -Wextra -lm",
+	"debug.onTaskErrors": "debugAnyway",
+	"powermode.enabled": true,
+	"powermode.presets": "flames",
+	"security.workspace.trust.untrustedFiles": "open",
+	"problems.showCurrentInStatus": true,
+	"javascript.updateImportsOnFileMove.enabled": "always",
+	"editor.inlineSuggest.enabled": true,
+	"github.copilot.enable": {
+		"*": true,
+		"yaml": false,
+		"plaintext": true,
+		"markdown": true
+	},
+	"python.defaultInterpreterPath": "/home/alvaro/.asdf/shims/python3.10",
 	"files.associations": {
-		"functional": "c",
+		"complex": "c",
+		"array": "c",
+		"vectors-double.h": "c",
+		"vector": "c",
+		"complex-int.h": "c",
 		"ratio": "c",
 		"random": "c",
 		"hash_map": "c",
 		"hash_set": "c",
 		"bitset": "c",
 		"chrono": "c",
-		"algorithm": "c"
+		"algorithm": "c",
+		"optional": "c",
+		"istream": "c",
+		"ostream": "c",
+		"system_error": "c",
+		"functional": "c",
+		"tuple": "c",
+		"type_traits": "c",
+		"utility": "c",
+		"cmath": "c",
+		"sstream": "c",
+		"atomic": "cpp",
+		"bit": "cpp",
+		"*.tcc": "cpp",
+		"cctype": "cpp",
+		"cerrno": "cpp",
+		"clocale": "cpp",
+		"cstdarg": "cpp",
+		"cstddef": "cpp",
+		"cstdint": "cpp",
+		"cstdio": "cpp",
+		"cstdlib": "cpp",
+		"cwchar": "cpp",
+		"cwctype": "cpp",
+		"deque": "cpp",
+		"exception": "cpp",
+		"iterator": "cpp",
+		"memory": "cpp",
+		"memory_resource": "cpp",
+		"numeric": "cpp",
+		"string": "cpp",
+		"string_view": "cpp",
+		"unordered_map": "cpp",
+		"fstream": "cpp",
+		"initializer_list": "cpp",
+		"ios": "cpp",
+		"iosfwd": "cpp",
+		"iostream": "cpp",
+		"limits": "cpp",
+		"new": "cpp",
+		"queue": "cpp",
+		"stdexcept": "cpp",
+		"streambuf": "cpp",
+		"cstdbool": "cpp",
+		"typeinfo": "cpp",
+		"*.rmd": "markdown"
 	},
-	"C_Cpp.errorSquiggles": "Disabled",
-	"C_Cpp.dimInactiveRegions": false
+	"r.interpreterPath": "/home/alvaro/.asdf/shims/R",
+	"r.rpath.linux": "/home/alvaro/.asdf/shims/R",
+	"r.lsp.debug": true
 }
