updated VS Code settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
 	"sync.forceDownload": true,
 	"sync.autoUpload": true,
 	"sync.autoDownload": true,
+	"workbench.productIconTheme": "material-product-icons",
 	"workbench.sideBar.location": "left",
 	"workbench.tree.indent": 15,
 	"workbench.colorTheme": "Dracula",
@@ -59,6 +60,7 @@
 	"git-graph.repository.commits.fetchAvatars": true,
 	"c-cpp-compile-run.cpp-flags": "-Wall -Wextra -lm",
 	"debug.onTaskErrors": "debugAnyway",
+	"bookmarks.saveBookmarksInProject": false,
 	"powermode.enabled": true,
 	"powermode.presets": "flames",
 	"powermode.combo.location": "editor",
