updated settings files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,7 +57,11 @@
 	"git.enableSmartCommit": true,
 	"gitlens.defaultDateFormat": null,
 	"gitlens.views.remotes.branches.layout": "list",
+	"gitlens.views.tags.branches.layout": "list",
+	"gitlens.views.branches.branches.layout": "list",
 	"git-graph.repository.commits.fetchAvatars": true,
+	"docker.images.sortBy": "Label",
+	"docker.containers.sortBy": "Label",
 	"c-cpp-compile-run.cpp-flags": "-Wall -Wextra -lm",
 	"debug.onTaskErrors": "debugAnyway",
 	"bookmarks.saveBookmarksInProject": false,
