--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,9 +18,6 @@
 	"workbench.colorTheme": "Dracula",
 	"workbench.iconTheme": "material-icon-theme",
 	"workbench.editor.restoreViewState": true,
-	"workbench.editorAssociations": {
-		"*.ipynb": "jupyter.notebook.ipynb"
-	},
 	"security.workspace.trust.untrustedFiles": "open",
 	"extensions.closeExtensionDetailsOnViewChange": false,
 	"sync.gist": "31d051020e1fe66435b53f28a0ed30ee",
@@ -32,7 +29,6 @@
 	"bracket-pair-colorizer-2.depreciation-notice": false,
 	"vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
 	"vsintellicode.features.python.deepLearning": "enabled",
-	"C_Cpp.updateChannel": "Insiders",
 	"C_Cpp.errorSquiggles": "disabled",
 	"C_Cpp.dimInactiveRegions": true,
 	"C_Cpp.inactiveRegionOpacity": 0.55,
@@ -246,6 +242,9 @@
 			"behavior": "link"
 		}
 	},
+	"http.proxy": "",
+	"http.proxyAuthorization": null,
+	"http.proxyStrictSSL": false,
 	"files.associations": {
 		"complex": "c",
 		"array": "c",
