chore: updated VS Code settings to shell environment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
 	"workbench.colorTheme": "Dracula",
 	"workbench.iconTheme": "material-icon-theme",
 	"workbench.editor.restoreViewState": true,
+	"terminal.integrated.defaultProfile.linux": "bash",
 	"security.workspace.trust.untrustedFiles": "open",
 	"extensions.closeExtensionDetailsOnViewChange": false,
 	"sync.gist": "31d051020e1fe66435b53f28a0ed30ee",
