--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
 	],
 	"jupyter.alwaysTrustNotebooks": true,
 	"jupyter.askForKernelRestart": false,
+	"typescript.tsserver.maxTsServerMemory": 2072,
 	"debug.allowBreakpointsEverywhere": true,
 	"debug.console.closeOnEnd": true,
 	"diffEditor.ignoreTrimWhitespace": false,
@@ -55,6 +56,7 @@
 	},
 	"git.autofetch": true,
 	"git.enableSmartCommit": true,
+	"git.openRepositoryInParentFolders": "always",
 	"gitlens.defaultDateFormat": null,
 	"gitlens.views.remotes.branches.layout": "list",
 	"gitlens.views.tags.branches.layout": "list",
@@ -245,9 +247,6 @@
 			"behavior": "link"
 		}
 	},
-	"http.proxy": "",
-	"http.proxyAuthorization": null,
-	"http.proxyStrictSSL": false,
 	"files.associations": {
 		"complex": "c",
 		"array": "c",
@@ -314,5 +313,14 @@
 		"compare": "cpp",
 		"concepts": "cpp",
 		"cstring": "cpp"
-	}
+	},
+	"json.schemas": [
+		{
+			"fileMatch": [
+				"/package.json"
+			],
+			"url": "https://json.schemastore.org/package",
+			"schema": true
+		}
+	]
 }
