--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,8 @@
 	"material-icon-theme.activeIconPack": "nest",
 	"vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
 	"vsintellicode.features.python.deepLearning": "enabled",
+	"editorconfig.generateAuto": true,
+	"editorconfig.template": "default",
 	"C_Cpp.errorSquiggles": "disabled",
 	"C_Cpp.dimInactiveRegions": true,
 	"C_Cpp.inactiveRegionOpacity": 0.55,
@@ -124,11 +126,6 @@
 	"docker.containers.sortBy": "Label",
 	"c-cpp-compile-run.cpp-flags": "-Wall -Wextra -lm",
 	"debug.onTaskErrors": "debugAnyway",
-	"bookmarks.saveBookmarksInProject": false,
-	"powermode.enabled": true,
-	"powermode.presets": "flames",
-	"powermode.combo.location": "editor",
-	"powermode.shake.enabled": false,
 	"problems.showCurrentInStatus": true,
 	"javascript.updateImportsOnFileMove.enabled": "always",
 	"typescript.updateImportsOnFileMove.enabled": "always",
@@ -159,6 +156,11 @@
 	"color-highlight.languages": [
 		"*"
 	],
+	"powermode.enabled": true,
+	"powermode.presets": "flames",
+	"powermode.combo.location": "editor",
+	"powermode.shake.enabled": false,
+	"bookmarks.saveBookmarksInProject": true,
 	"better-comments.multilineComments": true,
 	"better-comments.highlightPlainText": false,
 	"better-comments.tags": [
