--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
 	"editor.tabSize": 2,
 	"editor.insertSpaces": false,
 	"editor.formatOnSave": true,
+	"editor.wordWrap": "off",
 	"editor.bracketPairColorization.enabled": true,
 	"editor.guides.bracketPairs": "active",
 	"editor.pasteAs.enabled": false,
@@ -37,8 +38,6 @@
 	"sync.forceDownload": true,
 	"sync.autoUpload": true,
 	"sync.autoDownload": true,
-	"editorconfig.generateAuto": true,
-	"editorconfig.template": "default",
 	"bracket-pair-colorizer-2.depreciation-notice": false,
 	"bookmarks.saveBookmarksInProject": false,
 	"powermode.enabled": true,
@@ -48,6 +47,8 @@
 	"material-icon-theme.activeIconPack": "nest",
 	"vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
 	"vsintellicode.features.python.deepLearning": "enabled",
+	"editorconfig.generateAuto": true,
+	"editorconfig.template": "default",
 	"eslint.format.enable": true,
 	"eslint.validate": [
 		"javascript",
