--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -97,6 +97,22 @@
 			]
 		},
 		{
+			"name": "Node.js: Launch Current TypeScript File",
+			"type": "node",
+			"request": "launch",
+			"skipFiles": [
+				"<node_internals>/**"
+			],
+			"program": "${file}",
+			"preLaunchTask": "tsc: build - tsconfig.json",
+			"outFiles": [
+				"${workspaceFolder}/dist/**/*.js"
+			],
+			"internalConsoleOptions": "openOnSessionStart",
+			"sourceMaps": true,
+			"smartStep": true
+		},
+		{
 			"name": "Chrome: Launch against localhost",
 			"type": "chrome",
 			"request": "launch",
