--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -79,19 +79,16 @@
 			"console": "integratedTerminal"
 		},
 		{
+			"name": "Node.js: Debug with YARN",
+			"command": "yarn start:debug",
+			"request": "launch",
+			"type": "node-terminal"
+		},
+		{
 			"name": "Node.js: Launch Current File",
 			"type": "node",
 			"request": "launch",
 			"program": "${fileDirname}/${file}",
-			"skipFiles": [
-				"<node_internals>/**"
-			]
-		},
-		{
-			"name": "Node.js: Attach by Process ID",
-			"type": "node",
-			"request": "attach",
-			"processId": "${command:PickProcess}",
 			"skipFiles": [
 				"<node_internals>/**"
 			]
@@ -113,11 +110,20 @@
 			"smartStep": true
 		},
 		{
+			"name": "Node.js: Attach by Process ID",
+			"type": "node",
+			"request": "attach",
+			"processId": "${command:PickProcess}",
+			"skipFiles": [
+				"<node_internals>/**"
+			]
+		},
+		{
 			"name": "Chrome: Launch against localhost",
 			"type": "chrome",
 			"request": "launch",
 			"webRoot": "${workspaceFolder}",
-			"url": "http://localhost:8080/"
+			"url": "http://localhost:3000/"
 		}
 	]
 }
