updated workspaces and editor settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -169,6 +169,12 @@
 	"[json]": {
 		"editor.defaultFormatter": "vscode.json-language-features"
 	},
+	"[java]": {
+		"editor.defaultFormatter": "redhat.java"
+	},
+	"[dockercompose]": {
+		"editor.defaultFormatter": "ms-azuretools.vscode-docker"
+	},
 	"[python]": {
 		"editor.formatOnType": true
 	},
