updated workspaces and editor settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,13 +19,16 @@
 	"editor.codeActionsOnSave": {
 		"source.fixAll.eslint": "never"
 	},
+	"editor.unicodeHighlight.invisibleCharacters": false,
+	"editor.unicodeHighlight.ambiguousCharacters": false,
 	"explorer.autoReveal": true,
 	"explorer.confirmDragAndDrop": false,
 	"scm.defaultViewMode": "tree",
+	"scm.showHistoryGraph": false,
 	"workbench.productIconTheme": "material-product-icons",
 	"workbench.sideBar.location": "left",
 	"workbench.tree.indent": 15,
-	"workbench.colorTheme": "Dracula",
+	"workbench.colorTheme": "Dracula Theme",
 	"workbench.iconTheme": "material-icon-theme",
 	"workbench.editor.restoreViewState": true,
 	"terminal.integrated.defaultProfile.linux": "zsh",
@@ -194,6 +197,9 @@
 		"**/.factorypath": true
 	},
 	"color-highlight.languages": [
+		"*"
+	],
+	"color-highlight.hslWithNoFunctionLanguages": [
 		"*"
 	],
 	"better-comments.multilineComments": true,
