updated workspaces and launch settings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -85,6 +85,24 @@
 			"type": "node-terminal"
 		},
 		{
+			"name": "Node.js: Test Unit Debug with YARN",
+			"command": "yarn test:unit:watch",
+			"request": "launch",
+			"type": "node-terminal"
+		},
+		{
+			"name": "Node.js: Test Integ Debug with YARN",
+			"command": "yarn test:integration:watch",
+			"request": "launch",
+			"type": "node-terminal"
+		},
+		{
+			"name": "Node.js: Test E2E Debug with YARN",
+			"command": "yarn test:e2e:watch",
+			"request": "launch",
+			"type": "node-terminal"
+		},
+		{
 			"name": "Node.js: Launch Current File",
 			"type": "node",
 			"request": "launch",
@@ -103,7 +121,7 @@
 			"program": "${file}",
 			"preLaunchTask": "tsc: build - tsconfig.json",
 			"outFiles": [
-				"${workspaceFolder}/dist/**/*.js"
+				"${workspaceFolder}/build/**/*.js"
 			],
 			"internalConsoleOptions": "openOnSessionStart",
 			"sourceMaps": true,
