updated extensions list

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,40 +1,57 @@
 {
 	"recommendations": [
-		"aaron-bond.better-comments",
-		"develiteio.api-blueprint-viewer",
-		"exodiusstudios.comment-anchors",
-		"hoovercj.vscode-power-mode",
-		"lkytal.pomodoro",
-		"matt-meyers.vscode-dbml",
-		"mhutchie.git-graph",
-		"mikestead.dotenv",
-		"ms-toolsai.vscode-jupyter-cell-tags",
-		"ms-toolsai.vscode-jupyter-slideshow",
-		"naumovs.color-highlight",
-		"visualstudioexptteam.vscodeintellicode",
+		// Essentials
+		"vscode.debug-auto-launch",
+		"vscode.configuration-editing",
+		"vscode.extension-editing",
+		"vscode.git",
+		"vscode.git-base",
+		"vscode.merge-conflict",
+		"vscode.emmet",
+		"vscode.json-language-features",
+		"vscode.typescript-language-features",
+		"vscode.markdown-language-features",
+		"vscode.markdown-math",
+		"vscode.npm",
+		"vscode.github",
+		"vscode.github-authentication",
+		// Editor Configs
 		"editorconfig.editorconfig",
-		"ms-toolsai.jupyter-keymap",
-		"ms-toolsai.jupyter-renderers",
-		"dracula-theme.theme-dracula",
-		"vscode-icons-team.vscode-icons",
-		"vscjava.vscode-java-dependency",
-		"vscjava.vscode-maven",
-		"pkief.material-product-icons",
-		"ms-vsliveshare.vsliveshare",
+		"dbaeumer.vscode-eslint",
+		"visualstudioexptteam.vscodeintellicode",
 		"visualstudioexptteam.intellicode-api-usage-examples",
-		"vscjava.vscode-java-debug",
-		"vscjava.vscode-java-pack",
-		"vadimcn.vscode-lldb",
-		"kdarkhan.mips",
-		"redhat.java",
-		"ms-toolsai.jupyter",
-		"ms-python.python",
+		// Code Documentation and Bookmarks
 		"alefragnani.bookmarks",
-		"pkief.material-icon-theme",
-		"ms-vscode.cpptools",
+		"exodiusstudios.comment-anchors",
+		"aaron-bond.better-comments",
+		// Syntax Highlight
+		"naumovs.color-highlight",
+		"matt-meyers.vscode-dbml",
+		"develiteio.api-blueprint-viewer",
+		"mikestead.dotenv",
+		"kdarkhan.mips",
+		"puorc.awesome-vhdl",
+		// Git and Docker Tools
+		"mhutchie.git-graph",
 		"eamodio.gitlens",
 		"ms-azuretools.vscode-docker",
+		// Coding Assistance
+		"ms-vsliveshare.vsliveshare",
+		"lkytal.pomodoro",
+		"hoovercj.vscode-power-mode",
+		// Style
+		"vscode-icons-team.vscode-icons",
+		"dracula-theme.theme-dracula",
+		"pkief.material-icon-theme",
+		"pkief.material-product-icons",
+		// IDEs
+		"ms-vscode.cpptools",
 		"franneck94.c-cpp-runner",
-		"ms-python.vscode-pylance"
+		"vscjava.vscode-java-pack",
+		"ms-python.python",
+		"ms-python.vscode-pylance",
+		"ms-toolsai.jupyter",
+		"ms-vscode.vscode-serial-monitor",
+		"vsciot-vscode.vscode-arduino"
 	]
 }
